changed http methods for logout and destroysession
